==============
Changelog
==============
2019-07-04 (version 1.5):
    * fixed missing updates of time series tree view when adding / removing source images
    * map canvas context menu lists layers with spatial extent intersecting the cursor position only
    * fixes feature selection error

2019-07-02 (version 1.4):
    * adding vector layers with sublayers will add all sublayers
    * map canvas context menu "Focus on Spatial Extent" will hide maps without time series data for the current spatial extent
    * labeling dock allows to iterate over vector features. the spatial map extent will be centered to each feature (#26)
    * added several convenience function to TimeSeriesViewer object
    * fixed a bug that did not allow to create new polygon features
    * temporal profile visualization: fixed icons to preview selected plot style, coordinate described by "<fid> <name>", e.g. "42 Deforested", fixed plot style preview
    * updated SpectralLibraryViewer
    * fixed spelling error in stacked band input dialog
    * MapViews can add raster layers that have been opened in QGIS, e.g. XYZ Tile with OpenStreetMap data

2019-06-12 (version 1.3):
    * fixed #99: opening example closes QGIS on linux
    * fixed #96 and #99 : docutils not installed error when showing rst/md content
    * fixed #97: TSV does not start (Linux)

2019-05-31 (version 1.2):
    * added SaveAllMapsDialog  and menu option to export all maps as image files.
    * fixed #91: select Temporal Profile / Spectral Profile button activates the required map tools.
    * fixed #92: map canvas context menu "copy to clipboard" options.

2019-05-24 (version 1.1):
    * dates and data sources of the TimeSeries are now shown in a TreeView instead TableView
    * observation dates of current visible map canvases are highlighted in the time series tree view
    * sensor raster layer properties can be opened from MapView layer tree #87. Stats will be related to center mapcanvas.