@@ -364,6 +364,15 @@ ul.auto-toc {
 <h1 class="title">Changelog</h1>
 
 <dl class="docutils">
+<dt>2019-07-05 (version 1.5):</dt>
+<dd><ul class="first last simple">
+<li>fix: closed EO Time Series Viewer instance release all resources</li>
+<li>fixed missing updates of time series tree view when adding / removing source images</li>
+<li>map canvas context menu lists layers with spatial extent intersecting the cursor position only</li>
+<li>fixes feature selection error</li>
+<li>added quick label source image to label the path of raster layer</li>
+</ul>
+</dd>
 <dt>2019-07-02 (version 1.4):</dt>
 <dd><ul class="first last simple">
 <li>adding vector layers with sublayers will add all sublayers</li>
